[package]
name = "endlessh-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
fastrand = "2.2.0"
mio = { version = "1.0.2", features = ["os-poll", "net"] }
httparse = { version = "1.9.5", optional = true }

[features]
default = [ "metrics" ]
metrics = [ "httparse" ]
