[package]
name = "endlessh-rs"
version = "0.1.0"
authors = [ "Vivek Revankar <vivek@master-hax.com>" ]
edition = "2021"
description   = "ssh client trap"
readme = "README.md"
repository = "https://github.com/master-hax/endlessh-rs.git"
publish = false

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
fastrand = "2.2.0"
mio = { version = "1.0.2", features = ["os-poll", "net"] }
httparse = { version = "1.9.5", optional = true }

[features]
default = [ "metrics" ]
metrics = [ "httparse" ]
